# milodi

./: .gitignore  README.md  __init__.py  cli.py  export.py  extract.py  h300.py  notes.py  playback.py  pyproject.toml  requirements.txt
melomidi/: __init__.py  cli.py  converter.py  export.py  extract.py  h300.py  notes.py  pipeline.py  play.py  playback.py  preprocess.py
melomidi/web/: app.py
melomidi/web/static/: index.html
melomidi/web/static/css/: style.css
melomidi/web/static/js/: app.js
packaging/: milodi.spec  milodi_app.spec  milodi_app_entry.py  milodi_entry.py
packaging/icon/: Milodi.icns
scripts/: build_icon.sh  build_macos.sh  build_macos_app.sh  make_sample.py
web/: app.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: app.js
