[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "melomidi"
version = "0.1.0"
description = "Extract melody from audio and convert to buzzer note arrays"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "basic-pitch[tf]>=0.4.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pretty-midi>=0.2.10",
    "setuptools<81",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
]

[project.scripts]
melomidi = "melomidi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
