[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "milodi"
version = "0.1.0"
description = "Extract melody from audio for MIDI and H300 buzzer playback"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "basic-pitch[tf]>=0.4.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pretty-midi>=0.2.10",
    "setuptools<81",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
]

[project.scripts]
milodi = "milodi.cli:main"

[project.optional-dependencies]
web = ["flask>=3.0"]

[tool.setuptools]
package-dir = {"milodi" = "."}

packages = ["milodi", "milodi.web"]

[tool.setuptools.package-data]
"milodi.web" = ["static/**/*"]
